# ChangeLog for app-misc/mc
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.124 2007/05/19 12:07:07 armin76 Exp $

  19 May 2007; Raúl Porcel <armin76@gentoo.org> mc-4.6.1-r3.ebuild:
  alpha stable wrt #177316

  12 May 2007; Joshua Kinard <kumba@gentoo.org> mc-4.6.1-r3.ebuild:
  Stable on mips, per #177316.

  12 May 2007; Steve Dibb <beandog@gentoo.org> mc-4.6.1-r3.ebuild:
  amd64 stable, bug 177316

  07 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> mc-4.6.1-r3.ebuild:
  Stable on sparc wrt #177316

  07 May 2007; Jeroen Roovers <jer@gentoo.org> mc-4.6.1-r3.ebuild:
  Stable for HPPA (bug #177316).

  07 May 2007; Raúl Porcel <armin76@gentoo.org> mc-4.6.1-r3.ebuild:
  ia64 stable wrt #177316

  06 May 2007; Markus Rothe <corsair@gentoo.org> mc-4.6.1-r3.ebuild:
  Stable on ppc64; bug #177316

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> mc-4.6.1-r3.ebuild:
  ppc stable, bug #177316

  06 May 2007; Andrej Kacian <ticho@gentoo.org> mc-4.6.1-r3.ebuild:
  Stable on x86, bug #153925.

  23 Apr 2007; Markus Ullmann <jokey@gentoo.org> mc-4.6.1-r3.ebuild:
  some quotation and fix bug #167316

  12 Mar 2007; Javier Villavicencio <the_paya@gentoo.org>
  +files/mc-4.6.1-charset-locale-aliases.patch, mc-4.6.1-r3.ebuild:
  Correctly generate charset.alias. Fixes bug 169678.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> mc-4.6.1.ebuild,
  mc-4.6.1-r3.ebuild:
  Replacing einfo with elog

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -mc-4.6.1-r2.ebuild:
  QA: Removed unused versions.

*mc-4.6.1-r3 (15 Nov 2006)

  15 Nov 2006; Markus Ullmann <jokey@gentoo.org>
  +files/mc-4.6.1-bash-all.patch, +mc-4.6.1-r3.ebuild:
  Adding bash 3.2 compatibility patch from bug #153925 thanks to
  mehmetkemal@gmx.net

  06 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> -mc-4.6.1-r1.ebuild,
  mc-4.6.1-r2.ebuild:
  Do not use einstall to install, Makefile's support DESTDIR. Cleanup.
