@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/mc-4.6.1-r3.ebuild,v 1.13 2007/05/19 12:07:07 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/mc-4.6.1-r3.ebuild,v 1.14 2007/06/03 10:17:39 philantrop Exp $
 
 EAPI="prefix"
 
@@ -125,7 +125,7 @@ src_install() {
 	make install DESTDIR="${D}" || die "make install failed"
 
 	# install cons.saver setuid, to actually work
-	fperms u+s /usr/lib/mc/cons.saver
+	fperms u+s /usr/$(get_libdir)/mc/cons.saver
 
 	dodoc ChangeLog AUTHORS MAINTAINERS FAQ INSTALL* NEWS README*
 
